PixelWalker copy bot changelog

2025-07-30 Version 1.6.2
- Website: Fixed an issue where world portal wasn't importing properly in EER import.

2025-07-29 Version 1.6.1
- Website: Fixed an issue, where some positions of blocks would be ignored when importing EER worlds. Thanks John!

2025-07-28 Version 1.6.0
- Website: Added an option to import Everybody Edits Rewritten (EER) worlds.

2025-07-24 Version 1.5.2
- Website: Midi files with two identical notes at the same time no longer try to play both notes. Thanks Bluecloud!

2025-07-23 Version 1.5.1
- Bot: Updated to work with PixelWalker version 0.23.1-alpha

2025-07-19 Version 1.5.0
- Bot: Added command ".edit id find_id replace_id" - edits selected block ids from "find_id" to "replace_id".
- Bot: .move mode now does not get disabled anymore when new area is selected.
- Bot: Improved .move mode block placement speed a little.
- Bot: Fixed an issue where bot would not place blocks when they were pasted not within bounds of world.

2025-07-09 Version 1.4.0
- Bot: Added command ".edit name find replace" - edits selected block name substrings from "find" to "replace". Thanks Bluecloud!
- Bot: Added command ".edit math_op number [name_find]" - edits selected block number arguments. Thanks Bluecloud!
- Bot: Made .smartpaste command work with portals again. It only works if portal IDs are integers.
- Website: Added loading overlay when navigating between menu pages.

2025-07-06 Version 1.3.2
- Bot: Fixed an issue where move operation was not performed correctly in some cases
- Bot: Fixed an issue where move operation would take a long time for large selected area

2025-07-03 Version 1.3.1
- Bot: Updated to work with PixelWalker version 0.22.0-alpha

2025-06-23 Version 1.3.0
- Website: Added an option to import PNGs into the world as hex-backgrounds. Thanks Bluecloud!
- Website: Added an option to import MIDI files into the world. Currently only accepts piano midis. Thanks Bluecloud!

2025-06-22 Version 1.2.2