@@ -2,6 +2,7 @@ PixelWalker copy bot changelog
 
 2025-07-30 Version 1.6.2
 - Website: Fixed an issue where world portal wasn't importing properly in EER import.
+- Website: Improved EER import, by placing additional PW blocks that exist in EER.
 
 2025-07-29 Version 1.6.1
 - Website: Fixed an issue, where some positions of blocks would be ignored when importing EER worlds. Thanks John!
